[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-invisibility-mode"
version = "2.0.0"
description = "Real-time person invisibility and ghost effects with a threaded desktop UI"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Ghost Invisibility Mode contributors" }]
dependencies = [
  "numpy>=1.24,<3",
  "opencv-contrib-python>=4.8,<5",
  "Pillow>=10,<13",
]

[project.optional-dependencies]
ai = [
  "mediapipe>=0.10,<0.11",
]
audio = [
  "sounddevice>=0.4,<1",
]
virtual-camera = [
  "pyvirtualcam>=0.12,<1",
]
full = [
  "mediapipe>=0.10,<0.11",
  "sounddevice>=0.4,<1",
  "pyvirtualcam>=0.12,<1",
]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
ghost-invisibility = "app:main"

[tool.setuptools]
py-modules = ["app", "effects", "workers", "settings", "recording", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
